# proCAT

./: .README.md.swp  .all-contributorsrc  .dockerignore  .gitignore  .linkspector.yml  .markdownlint.yaml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev-requirements.txt  doc-requirements.txt  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: check-links.yml  ci.yml  docs.yml  release.yml
docs/: gen_ref_nav.py
main/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  huey.py  models.py  models_utils.py  notify.py  oidc.py  plots.py  report.py  tables.py  tasks.py  timeseries.py  urls.py  utils.py  views.py  widgets.py
main/Clockify/: __init__.py  api_interface.py
main/migrations/: 0001_initial.py  0002_department.py  0002_department_updated.py  0003_activitycode.py  0003_analysiscode.py  0004_initial_activity_codes.py  0004_initial_analysis_codes.py  0005_project.py  0006_funding.py  0007_alter_funding_options_alter_funding_budget_and_more.py  0008_capacity.py  0009_alter_capacity_value.py  0010_alter_funding_budget_alter_funding_daily_rate.py  0010_alter_funding_project.py  0011_alter_funding_budget_alter_funding_daily_rate.py  0012_timeentry.py  0013_project_clockify_id.py  0013_project_notifications_effort_and_more.py  0014_merge_20250620_1133.py  0015_alter_project_notifications_effort_and_more.py  0016_monthlycharge.py  0017_timeentry_monthly_charge.py  0018_remove_funding_project_code_funding_activity_and_more.py  0019_remove_timeentry_monthly_charge_and_more.py  0019_timeentry_clockify_id.py  0020_add_clockify_id_to_timeentry.py  0021_horse_group.py  0022_alter_funding_activity.py  0023_monthlycharge_status.py  0024_alter_project_status.py  0025_projectphase.py  0025_rse_group.py
main/templates/main/: base.html  base_create.html  base_delete.html  base_update.html  capacities.html  capacity_planning.html  cost_recovery.html  funding.html  funding_detail.html  funding_form.html  funding_update.html  index.html  navbar.html  project_create.html  project_detail.html  project_form.html  project_phase_delete.html  project_phase_detail.html  project_phase_form.html  project_phase_update.html  project_phases.html  project_update.html  projects.html
main/templates/registration/: login.html  register.html
main/templatetags/: __init__.py  procat_extras.py
procat/: __init__.py  __main__.py  asgi.py  settings.py  urls.py  wsgi.py
procat/settings/: __init__.py  _production.py  settings.py
templates/admin/main/timeentry/: change_list.html
tests/: conftest.py  test_placeholder.py  test_procat.py
tests/main/: test_api_interface.py  test_models.py  test_models_utils.py  test_plots.py  test_report.py  test_tasks.py  test_timeseries.py  test_utils.py  test_views.py  test_widgets.py  view_utils.py
